PSoC Creator/Ball.cydsn/CortexM3/ARM_GCC_493/Debug/BUILD.log
--------------- Build Started: 05/01/2023 20:02:04 Project: Ball, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Michael\AppData\Local\Cypress Semiconductor\PSoC Creator\3.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "C:\Users\Michael\Dropbox (MIT)\College\Senior Year\6.115 - Microcomputer Project Laboratory\6.115 - Final Project\Software\PSoC Creator\Ball.cydsn\Ball.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\Michael\Dropbox (MIT)\College\Senior Year\6.115 - Microcomputer Project Laboratory\6.115 - Final Project\Software\PSoC Creator\Ball.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
ADD: pft.M0040: information: The following 2 pin(s) will be assigned a location by the fitter: \USBUART:Dm(0)\, \USBUART:Dp(0)\
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c .\main.c -o .\CortexM3\ARM_GCC_493\Debug\main.o
.\main.c: In function 'RC_Connection_ISR_Handler':
.\main.c:50:5: warning: implicit declaration of function 'RC_Connection_Timer_ReadStatusRegister' [-Wimplicit-function-declaration]
     rc_connection_timer_int_flag = RC_Connection_Timer_ReadStatusRegister(); // Read and clear interrupt status      
     ^
.\main.c:51:39: error: 'RC_Connection_Timer_STATUS_CAPTURE' undeclared (first use in this function)
     if(rc_connection_timer_int_flag & RC_Connection_Timer_STATUS_CAPTURE)
                                       ^
.\main.c:51:39: note: each undeclared identifier is reported only once for each function it appears in
.\main.c:52:9: warning: implicit declaration of function 'RC_Connection_Timer_ReadCapture' [-Wimplicit-function-declaration]
         rc_connection_timer_count = RC_TIMER_PERIOD - RC_Connection_Timer_ReadCapture();    
         ^
.\main.c:53:39: error: 'RC_Connection_Timer_STATUS_TC' undeclared (first use in this function)
     if(rc_connection_timer_int_flag & RC_Connection_Timer_STATUS_TC)   // Did we overflow??
                                       ^
.\main.c:56:5: warning: implicit declaration of function 'RC_Connection_Timer_Stop' [-Wimplicit-function-declaration]
     RC_Connection_Timer_Stop();
     ^
.\main.c:57:5: warning: implicit declaration of function 'RC_Connection_Timer_WriteCounter' [-Wimplicit-function-declaration]
     RC_Connection_Timer_WriteCounter(RC_TIMER_PERIOD);
     ^
.\main.c: In function 'main':
.\main.c:90:5: warning: implicit declaration of function 'RC_Connection_Timer_Interrupt_StartEx' [-Wimplicit-function-declaration]
     RC_Connection_Timer_Interrupt_StartEx(RC_Connection_ISR_Handler);
     ^
.\main.c:91:5: warning: implicit declaration of function 'RC_Connection_Timer_Start' [-Wimplicit-function-declaration]
     RC_Connection_Timer_Start();
     ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
.\main.c:100:9: warning: unused variable 'b' [-Wunused-variable]
     int b = 0;
         ^
.\main.c:99:9: warning: unused variable 'a' [-Wunused-variable]
     int a = 0;
         ^
.\main.c:98:9: warning: unused variable 'count_value' [-Wunused-variable]
     int count_value = 0;
         ^
.\main.c:96:9: warning: unused variable 'compare_value' [-Wunused-variable]
     int compare_value = 127;
         ^
.\main.c: In function 'get_rc_value':
.\main.c:126:9: warning: implicit declaration of function 'abs' [-Wimplicit-function-declaration]
         if (abs(RC_TIMER_MID_VALUE - rc_timer_count) < RC_TIMER_MID_TOLERANCE) {
         ^
.\main.c:138:13: warning: implicit declaration of function 'sprintf' [-Wimplicit-function-declaration]
             sprintf(debug_data_buf, "[%ld] (%d) RC: %ld --> Motor: %d \r\n", MILLISECONDS, rc_connected, rc_timer_count, motor_pwm);
             ^
.\main.c:138:13: warning: incompatible implicit declaration of built-in function 'sprintf'
--------------- Build Failed: 05/01/2023 20:02:13 ---------------
